work/xxxx_jupyteronline-binderhub/ingress-jupyteronline-prod.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: jupyteronline
  name: ingress-jupyteronline
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    #ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
  - hosts:
    - www.jupyteronline.com
    secretName: nginx-jupyteronline-prod-secret
  rules:
    # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
    - host: www.jupyteronline.com
      http:
        paths:
          - path: /
            backend:
              serviceName: proxy-public
              servicePort: 80
